<resources>
    <string name="email">E-mail</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_having_account">Already Having an Account?</string>
    <string name="log_in">Log In</string>
    <string name="not_having_account">Not Having an Account?</string>
    <string name="your_account">Your Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_auth">Log in・Sign up</string>

    <string name="login_tip">Log in</string>
    <string name="project_tip">Other language projects!</string>

    <string-array name="projects_array">
        <item>Project 1</item>
        <item>Project 2</item>
        <item>Project 3</item>
    </string-array>

    <string name="app_name">Joytan REC</string>
    <string name="app_name_long">Joytan Recorder</string>

    <!-- 実行時許可 -->
    <string name="title_permission">Permission Request</string>
    <string name="permission_audio">This app needs microphone permission.</string>
    <string name="permission_write">This app writes a temporary WAV file before sending audio.
        Please allow this app to write into the external storage.</string>
    <!-- メイン画面 -->
    <string name="black">Black</string>
    <string name="script">Script</string>
    <string name="pr">PR</string>

    <!-- 警告表示 -->
    <string name="warning_time_limit">The max recording length is 10 sec.</string>
    <string name="warning_volume">The music volume is mute.</string>
    <string name="warning_no_sound">No sound is recorded.</string>
    <string name="warning_tongue_twister" translatable="false">It has only in Japanese</string>

    <!-- Setting menu -->
    <string name="title_setting">Settings</string>
    <string name="pref_sound">Sound effect</string>
    <string name="pref_invite">Tell this app</string>
    <string name="pref_information">About this app</string>
    <string name="pref_oss">Open source license</string>
    <string name="version" translatable="false">Version</string>
    <string name="version_name" translatable="false">BETA-1.1</string>
    <string name="copyright" translatable="false">&#169; Joytan App</string>
    <string name="pref_privacy_policy">Privacy Policy</string>
    <string name="joytan_public">Progress and Review - Joytan Public</string>
    <string name="pref_credit">Edit Your Credit</string>
    <!-- 紹介 -->

    <!-- 台本 -->
    <string name="login">Login</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="message_login">You can edit the script when you log in.</string>
    <string name="server_client_id" translatable="false">805799102419-e6b73aagj0b6kri74ctolv8l268p2t1h.apps.googleusercontent.com</string>
    <string name="error_internet_connection">Internet connection is required.</string>
    <string name="error_auth">Authentication failed.</string>
    <string name="error_google_auth">Google authentication failed. There may be no Internet connection.</string>
    <string name="error_unknown_response">Unknown response.</string>
    <string name="error_unknown_error">Unknown error.</string>

    <!-- 広告 -->
    <!-- テスト用バナー -->
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <!-- 分析 -->
    <string name="tracking_id" translatable="false">UA-66898906-2</string>

    <!-- 自動生成 -->
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_start" translatable="false">StartActivity</string>
    <string name="title_activity_setting" translatable="false">SettingActivity</string>

    <string name="saved_user_data" translatable="false">SAVED_USER_DATA</string>
    <string name="last_project_name" translatable="false">LAST_PROJECT_NAME</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_about" translatable="false">AboutActivity</string>
    <string name="roll_notice">Please speak clearly in a quiet place. By sending, your voice recordings will be used on YouTube.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_slack">Join team</string>
    <string name="menu_pub">Joytan Public</string>
    <string name="menu_youtube">Joytan App</string>
    <string name="menu_project">Start project</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_tools">Settings</string>
    <string name="menu_share">Share this app</string>
    <string name="menu_about">About this app</string>

    <string name="project_startup">Project startup🚀</string>
    <string name="invite_title">Invite people!</string>
    <string name="pref_last_proj">pref_last_proj</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">496799707638295</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb496799707638295</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">sKaOFUrhiIrYAM7iuPNi3Mcl5</string>
    <string name="twitter_consumer_secret" translatable="false">rMFClytgcgBjYzQz6uJPjNmo9ZQJBt77aVQ03V1HM89uQ6IGwP</string>
</resources>
