<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_signup"
            android:icon="@drawable/ic_user"
            android:title="@string/title_auth" />
        <item
            android:id="@+id/nav_project"
            android:icon="@drawable/ic_start_up"
            android:title="@string/menu_project" />
<!--        <item-->
<!--            android:id="@+id/nav_tool"-->
<!--            android:icon="@drawable/ic_menu_manage"-->
<!--            android:title="@string/menu_tools" />-->
    </group>

    <item android:title="Our services">
        <menu>
            <item
                android:id="@+id/nav_slack"
                android:icon="@drawable/ic_slack_logo"
                android:title="@string/menu_slack" />
            <item
                android:id="@+id/nav_pub"
                android:icon="@drawable/ic_men_carrying"
                android:title="@string/menu_pub" />
            <item
                android:id="@+id/nav_youtube"
                android:icon="@drawable/ic_youtube_play"
                android:title="@string/menu_youtube"
                android:tint="#FF0000"/>
        </menu>
    </item>

    <group android:checkableBehavior="single"
        android:id="@+id/bottom_group">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_information"
            android:title="@string/menu_about" />
    </group>


</menu>
